change commit